tests/ui/proc_macro_hack.stderr
warning: panic message is not a string literal
   --> $DIR/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |            ^^^^^^^^
    |
    = note: `#[warn(non_fmt_panic)]` on by default
    = note: this is no longer accepted in Rust 2021
help: add a "{}" format string to Display the message
    |
472 |     panic!("{}", AbortNow)
    |            ^^^^^
help: or use std::panic::panic_any instead
    |
472 |     std::panic::panic_any(AbortNow)
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: 1 warning emitted

warning: panic message is not a string literal
   --> $DIR/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |            ^^^^^^^^
    |
    = note: `#[warn(non_fmt_panic)]` on by default
    = note: this is no longer accepted in Rust 2021
help: add a "{}" format string to Display the message
    |
472 |     panic!("{}", AbortNow)
    |            ^^^^^
help: or use std::panic::panic_any instead
    |
472 |     std::panic::panic_any(AbortNow)
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: 1 warning emitted

error: BOOM
 --> $DIR/proc_macro_hack.rs:8:25
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                         ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: BOOM
 --> $DIR/proc_macro_hack.rs:8:41
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                                         ^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unreachable expression
 --> $DIR/proc_macro_hack.rs:8:32
  |
8 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                -------------   ^^^^^^^^^^^^^^^ unreachable expression
  |                |
  |                any code following this expression is unreachable
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
